# clawhq

./: .doc-standard.yaml  .gitignore  BRIEF.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  netlify.toml  package-lock.json  package.json  product.md  tsconfig.json  vercel.json  vitest.config.ts  vitest.contract.config.ts  vitest.e2e.config.ts
.aishore/: README.md  aishore  checksums.sha256  config.yaml  gitignore-entries.txt
.claude/: settings.json
.githooks/: pre-push
backlog/: GAP-ANALYSIS.md  assumptions.json  backlog.json  bugs.json  sprint.json
coverage/: clover.xml  coverage-final.json  generator.ts.html  index.html  index.ts.html  (+3 more)
src/market-engine/: Dockerfile  pyproject.toml  requirements.txt
src/market-engine/market_engine/: __init__.py  __main__.py  config.py
src/market-engine/market_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/market-engine/market_engine/lib/: __init__.py  journal.py  market_calendar.py  risk_governor.py
src/market-engine/market_engine/monitor/: __init__.py  dedup.py  level_engine.py  order_parser.py
src/market-engine/market_engine/state/: __init__.py  alerts.py  engine_status.py  positions.py  prices.py  watchlist.py
src/market-engine/market_engine/stream/: __init__.py  account_ws.py  market_ws.py  reconnect.py  session.py
src/market-engine/market_engine/web/: __init__.py  app.py  pages.py  sse.py
src/market-engine/tests/: test_alerts.py  test_config.py  test_dedup.py  test_level_engine.py  test_order_parser.py  test_prices.py  test_reconnect.py  test_watchlist.py
(+1406 files in other folders)
