[project]
name = "market-engine"
version = "0.1.0"
description = "Real-time Tradier market data streaming and ORDER level monitoring"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0,<14.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "jinja2>=3.1.0,<4.0",
    "sse-starlette>=2.1.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
